--- a/.gitignore
+++ b/.gitignore
@@ -1,42 +1,18 @@
-*.tmproj
-tmp/**/*
-config/database.yml
-config/*.sphinx.conf
-db/sphinx/**/*
-db/schema.rb
-log/*
-.rvmrc
-
-# Mac OS X Finder and whatnot
+# Xcode
 .DS_Store
-
-# XCode (and ancestors) per-user config (very noisy, and not relevant)
-*.mode1
-*.mode1v3
-*.mode2v3
-*.perspective
-*.perspectivev3
-*.pbxuser
-*.xcworkspace
-xcuserdata
-
-# Generated files
-VersionX-revision.h
-
-# build products
 build/
-*.[o]
-
-# Other source repository archive directories (protects when importing)
-.hg
-.svn/*/**
-CVS
-
-# automatic backup files
-*~.nib
-*.swp
-*~
-*(Autosaved).rtfd/
-Backup[ ]of[ ]*.pages/
-Backup[ ]of[ ]*.key/
-Backup[ ]of[ ]*.numbers/
+*.pbxuser
+!default.pbxuser
+*.mode1v3
+!default.mode1v3
+*.mode2v3
+!default.mode2v3
+*.perspectivev3
+!default.perspectivev3
+*.xcworkspace
+!default.xcworkspace
+xcuserdata
+profile
+*.moved-aside
+DerivedData
+.idea/
